--- a/index.html
+++ b/index.html
@@ -16,12 +16,56 @@
 </head>
 
 <body>
+  <!-- SECTION -->
   <header>
-
+    <nav class="navbar navbar-dark navbar-expand bg-dark text-light px-2">
+      <a class="navbar-brand" href="#">
+        <img src="https://codeworks.blob.core.windows.net/public/assets/img/cw-mark.png" height="45" alt=""
+          loading="lazy">
+        <span class="ml-2">Pokedex</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <!-- NAVLINKS -->
+          <!-- <a href="#/about" class="nav-link">About</a> -->
+        </div>
+      </div>
+      <div class="flex-grow-1 justify-content-end align-items-center d-flex" id="authstate"></div>
+    </nav>
   </header>
 
   <main>
+    <!-- SECTION Generation list goes here-->
+    <section id="gen-list" class="row">
 
+    </section>
+    <!-- !SECTION -->
+    <!-- SECTION Pokemon lists + selected pokemon are contained here -->
+    <section class="row">
+      <div class="col-md-3">
+        <div id="gen-pokemon-list" class="pokemon-list">
+          <!-- NOTE Pokemon gen list -->
+
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div id="active-pokemon" class="pokemon-list">
+          <!-- NOTE Selected Pokemon -->
+
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div id="my-pokemon-list" class="pokemon-list">
+          <!-- NOTE My pokemon list -->
+
+        </div>
+      </div>
+    </section>
+    <!-- !SECTION -->
   </main>
 
   <footer>
