get and draw pokemon

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
   </header>
 
-  <main>
+  <main class="container-fluid">
     <!-- SECTION Generation list goes here-->
     <section id="gen-list" class="row">
 
